--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,10 @@ S3method(plot,sumcat)
 S3method(summary,sumcat)
 export(model_cat)
 export(ranking)
+import(EZtune)
+import(MASS)
+import(ggplot2)
+import(randomForest)
+importFrom(stats,glm)
+importFrom(stats,model.frame)
+importFrom(stats,predict)
