--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,5 +23,5 @@ License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Depends: 
-    R (>= 4.1), ggplot2, EZtune, MASS
+    R (>= 4.1), ggplot2, EZtune, MASS, randomForest
 RoxygenNote: 7.1.2
