updates and merges

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,8 @@
 S3method(plot,sumcat)
 S3method(summary,sumcat)
 export(model_cat)
-export(ranking)
+export(rank.sumcat)
+export(rank_methods)
 import(EZtune)
 import(MASS)
 import(ggplot2)
