--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(rank_methods)
 import(EZtune)
 import(MASS)
 import(ggplot2)
-import(randomForest)
+importFrom(randomForest,randomForest)
 importFrom(stats,glm)
 importFrom(stats,model.frame)
 importFrom(stats,predict)
