--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,3 +25,7 @@ LazyData: true
 Depends: 
     R (>= 4.1), ggplot2, EZtune, MASS, randomForest
 RoxygenNote: 7.1.2
+Suggests: 
+    rmarkdown,
+    knitr
+VignetteBuilder: knitr
